fix some overflow issues

--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,7 @@ body {
 
 .row {
     width: 100%;
+    overflow-x: hidden;
 }
 
 /* navigation bar starts here */
